--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 
         <div class="icons">
             <img src="image/icon-2.png" alt="">
-            <h3>+123-456-7890</h3>
+            <h3>+212-6.42.08.34.06</h3>
         </div>
 
         <div class="icons">
             <img src="image/icon-3.png" alt="">
-            <h3>mumbai, india - 400104</h3>
+            <h3>Agadir, Maroc - 80652</h3>
         </div>
 
     </div>
@@ -192,14 +192,14 @@
     <div class="bottom">
 
         <div class="share">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
-            <a href="#" class="fab fa-pinterest"></a>
+            <a href="https://www.facebook.com/ayoub.elmentaji/" class="fab fa-facebook-f"></a>
+            <a href="https://www.facebook.com/ayoub.elmentaji/" class="fab fa-twitter"></a>
+            <a href="https://www.facebook.com/ayoub.elmentaji/" class="fab fa-instagram"></a>
+            <a href="https://www.facebook.com/ayoub.elmentaji/" class="fab fa-linkedin"></a>
+            <a href="https://www.facebook.com/ayoub.elmentaji/" class="fab fa-pinterest"></a>
         </div>
 
-        <div class="credit"> created <span>mr. web designer</span> | all rights reserved! </div>
+        <div class="credit"> created By <span>AYOUB ELMENTAGI</span> | all rights reserved! </div>
         
     </div>
 
